--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <title>Portifólio</title>
 </head>
 <body>
+ <div class="card">
+    <div class="card-imagem">
+        <img src="imagens/xerek.jpg" alt="Equilibrium NFT" />
+      </div>
       <h2 class="card-title">Equilibrium #3429</h2>
       <p class="card-descricao">Our Equilibrium collection promotes balance and calm.</p>
       <div class="card-info">
@@ -20,7 +24,7 @@
       </div>
       <hr />
       <div class="card-creator">
-        <img src="images.jpg" alt="Creator" class="creator-icon" />
+        <img src="imagens/helloo.jpg" alt="Creator" class="creator-icon" />
         <span>Creation of <a href="#">Jules Wyvern</a></span>
       </div>
     </div>
