--- a/index.html
+++ b/index.html
@@ -6,29 +6,83 @@
     <title>Portifólio</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
 </head>
 <body>
- <div class="card">
+
+<div class="cardlist">
+  <div class="card animate__animated animate__zoomIn">
     <div class="card-imagem">
-        <img src="imagens/xerek.jpg" alt="Equilibrium NFT" />
-      </div>
-      <h2 class="card-title">Equilibrium #3429</h2>
-      <p class="card-descricao">Our Equilibrium collection promotes balance and calm.</p>
-      <div class="card-info">
-        <div class="preco">
-          <i class="fab fa-ethereum"></i>
-          <span>0.041 ETH</span>
-        </div>
-        <div class="dias">
-          <i class="far fa-clock"></i>
-          <span>3 days left</span>
-        </div>
-      </div>
-      <hr />
-      <div class="card-creator">
-        <img src="imagens/helloo.jpg" alt="Creator" class="creator-icon" />
-        <span>Creation of <a href="#">Jules Wyvern</a></span>
-      </div>
+      <img src="imagens/xerek.jpg" alt="Equilibrium NFT 1" />
     </div>
+    <h2 class="card-title">Equilibrium #3429</h2>
+    <p class="card-descricao">Our Equilibrium collection promotes balance and calm.</p>
+    <div class="card-info">
+      <div class="preco"><i class="fab fa-ethereum"></i><span>0.041 ETH</span></div>
+      <div class="dias"><i class="far fa-clock"></i><span>3 days left</span></div>
+    </div>
+    <hr />
+    <div class="card-creator">
+      <img src="imagens/helloo.jpg" alt="Creator" class="creator-icon" />
+      <span>Creation of <a href="#">Jules Wyvern</a></span>
+    </div>
+  </div>
+
+  <div class="card animate__animated animate__zoomIn">
+    <div class="card-imagem">
+      <img src="imagens/xerek.jpg" alt="Equilibrium NFT 1" />
+    </div>
+    <h2 class="card-title">Equilibrium #3429</h2>
+    <p class="card-descricao">Our Equilibrium collection promotes balance and calm.</p>
+    <div class="card-info">
+      <div class="preco"><i class="fab fa-ethereum"></i><span>0.041 ETH</span></div>
+      <div class="dias"><i class="far fa-clock"></i><span>3 days left</span></div>
+    </div>
+    <hr />
+    <div class="card-creator">
+      <img src="imagens/helloo.jpg" alt="Creator" class="creator-icon" />
+      <span>Creation of <a href="#">Jules Wyvern</a></span>
+    </div>
+  </div>
+
+  <div class="card animate__animated animate__zoomIn">
+    <div class="card-imagem">
+      <img src="imagens/xerek.jpg" alt="Equilibrium NFT 1" />
+    </div>
+    <h2 class="card-title">Equilibrium #3429</h2>
+    <p class="card-descricao">Our Equilibrium collection promotes balance and calm.</p>
+    <div class="card-info">
+      <div class="preco"><i class="fab fa-ethereum"></i><span>0.041 ETH</span></div>
+      <div class="dias"><i class="far fa-clock"></i><span>3 days left</span></div>
+    </div>
+    <hr />
+    <div class="card-creator">
+      <img src="imagens/helloo.jpg" alt="Creator" class="creator-icon" />
+      <span>Creation of <a href="#">Jules Wyvern</a></span>
+    </div>
+  </div>
+
+  <div class="card animate__animated animate__zoomIn">
+    <div class="card-imagem">
+      <img src="imagens/xerek.jpg" alt="Equilibrium NFT 1" />
+    </div>
+    <h2 class="card-title">Equilibrium #3429</h2>
+    <p class="card-descricao">Our Equilibrium collection promotes balance and calm.</p>
+    <div class="card-info">
+      <div class="preco"><i class="fab fa-ethereum"></i><span>0.041 ETH</span></div>
+      <div class="dias"><i class="far fa-clock"></i><span>3 days left</span></div>
+    </div>
+    <hr />
+    <div class="card-creator">
+      <img src="imagens/helloo.jpg" alt="Creator" class="creator-icon" />
+      <span>Creation of <a href="#">Jules Wyvern</a></span>
+    </div>
+  </div>
+
+
+
+
+
+</div>
 </body>
 </html>
