--- a/index.html
+++ b/index.html
@@ -15,11 +15,15 @@
     <div class="card-imagem">
       <img src="imagens/xerek.jpg" alt="Equilibrium NFT 1" />
     </div>
-    <h2 class="card-title">Equilibrium #3429</h2>
-    <p class="card-descricao">Our Equilibrium collection promotes balance and calm.</p>
+    <h2 class="card-title">Shrek Princess Charm School</h2>
+    <p class="card-descricao">Shrek learns royal manners to save a hidden kingdom.</p>
     <div class="card-info">
-      <div class="preco"><i class="fab fa-ethereum"></i><span>0.041 ETH</span></div>
-      <div class="dias"><i class="far fa-clock"></i><span>3 days left</span></div>
+      <div class="preco">
+        <img src="imagens/lindo.png" alt="Creator" class="creator-icon" />
+      </div>
+      <div class="dias">
+        <img src="imagens/icons8-shrek-48.png" alt="Creator" class="creator-icon" />
+      </div>
     </div>
     <hr />
     <div class="card-creator">
@@ -32,11 +36,15 @@
     <div class="card-imagem">
       <img src="imagens/xerek.jpg" alt="Equilibrium NFT 1" />
     </div>
-    <h2 class="card-title">Equilibrium #3429</h2>
-    <p class="card-descricao">Our Equilibrium collection promotes balance and calm.</p>
+    <h2 class="card-title">Shrek in The Princess & the Pop Star</h2>
+    <p class="card-descricao">Shrek rocks the stage to unite rival kingdoms.</p>
     <div class="card-info">
-      <div class="preco"><i class="fab fa-ethereum"></i><span>0.041 ETH</span></div>
-      <div class="dias"><i class="far fa-clock"></i><span>3 days left</span></div>
+      <div class="preco">
+        <img src="imagens/lindo.png" alt="Creator" class="creator-icon" />
+      </div>
+      <div class="dias">
+        <img src="imagens/icons8-shrek-48.png" alt="Creator" class="creator-icon" />
+      </div>
     </div>
     <hr />
     <div class="card-creator">
@@ -49,11 +57,15 @@
     <div class="card-imagem">
       <img src="imagens/xerek.jpg" alt="Equilibrium NFT 1" />
     </div>
-    <h2 class="card-title">Equilibrium #3429</h2>
-    <p class="card-descricao">Our Equilibrium collection promotes balance and calm.</p>
+    <h2 class="card-title">Shrek and the Diamond Castle</h2>
+    <p class="card-descricao">Shrek finds a magical castle and new friends.</p>
     <div class="card-info">
-      <div class="preco"><i class="fab fa-ethereum"></i><span>0.041 ETH</span></div>
-      <div class="dias"><i class="far fa-clock"></i><span>3 days left</span></div>
+      <div class="preco">
+        <img src="imagens/lindo.png" alt="Creator" class="creator-icon" />
+      </div>
+      <div class="dias">
+        <img src="imagens/icons8-shrek-48.png" alt="Creator" class="creator-icon" />
+      </div>
     </div>
     <hr />
     <div class="card-creator">
@@ -66,11 +78,15 @@
     <div class="card-imagem">
       <img src="imagens/xerek.jpg" alt="Equilibrium NFT 1" />
     </div>
-    <h2 class="card-title">Equilibrium #3429</h2>
-    <p class="card-descricao">Our Equilibrium collection promotes balance and calm.</p>
+    <h2 class="card-title">Shrek and the Secret Agents</h2>
+    <p class="card-descricao">Shrek teams up with agents to stop a jewel thief.</p>
     <div class="card-info">
-      <div class="preco"><i class="fab fa-ethereum"></i><span>0.041 ETH</span></div>
-      <div class="dias"><i class="far fa-clock"></i><span>3 days left</span></div>
+      <div class="preco">
+        <img src="imagens/lindo.png" alt="Creator" class="creator-icon" />
+      </div>
+      <div class="dias">
+        <img src="imagens/icons8-shrek-48.png" alt="Creator" class="creator-icon" />
+      </div>
     </div>
     <hr />
     <div class="card-creator">
@@ -84,11 +100,15 @@
     <div class="card-imagem">
       <img src="imagens/xerek.jpg" alt="Equilibrium NFT 1" />
     </div>
-    <h2 class="card-title">Equilibrium #3429</h2>
-    <p class="card-descricao">Our Equilibrium collection promotes balance and calm.</p>
+    <h2 class="card-title">Shrek in the fashion fairy tale</h2>
+    <p class="card-descricao">Shrek explores the world of glamor and enchanted designs.</p>
     <div class="card-info">
-      <div class="preco"><i class="fab fa-ethereum"></i><span>0.041 ETH</span></div>
-      <div class="dias"><i class="far fa-clock"></i><span>3 days left</span></div>
+      <div class="preco">
+        <img src="imagens/lindo.png" alt="Creator" class="creator-icon" />
+      </div>
+      <div class="dias">
+        <img src="imagens/icons8-shrek-48.png" alt="Creator" class="creator-icon" />
+      </div>
     </div>
     <hr />
     <div class="card-creator">
@@ -101,11 +121,15 @@
     <div class="card-imagem">
       <img src="imagens/xerek.jpg" alt="Equilibrium NFT 1" />
     </div>
-    <h2 class="card-title">Equilibrium #3429</h2>
-    <p class="card-descricao">Our Equilibrium collection promotes balance and calm.</p>
+    <h2 class="card-title">Shrek in A Mermaid Tale Part 1</h2>
+    <p class="card-descricao">Shrek dives into an underwater adventure full of secrets and splashes.</p>
     <div class="card-info">
-      <div class="preco"><i class="fab fa-ethereum"></i><span>0.041 ETH</span></div>
-      <div class="dias"><i class="far fa-clock"></i><span>3 days left</span></div>
+      <div class="preco">
+        <img src="imagens/lindo.png" alt="Creator" class="creator-icon" />
+      </div>
+      <div class="dias">
+        <img src="imagens/icons8-shrek-48.png" alt="Creator" class="creator-icon" />
+      </div>
     </div>
     <hr />
     <div class="card-creator">
@@ -118,11 +142,15 @@
     <div class="card-imagem">
       <img src="imagens/xerek.jpg" alt="Equilibrium NFT 1" />
     </div>
-    <h2 class="card-title">Equilibrium #3429</h2>
-    <p class="card-descricao">Our Equilibrium collection promotes balance and calm.</p>
+    <h2 class="card-title">Shrek in A Mermaid Tale Part 2</h2>
+    <p class="card-descricao">Shrek returns to the ocean, facing new challenges and friendships.</p>
     <div class="card-info">
-      <div class="preco"><i class="fab fa-ethereum"></i><span>0.041 ETH</span></div>
-      <div class="dias"><i class="far fa-clock"></i><span>3 days left</span></div>
+      <div class="preco">
+        <img src="imagens/lindo.png" alt="Creator" class="creator-icon" />
+      </div>
+      <div class="dias">
+        <img src="imagens/icons8-shrek-48.png" alt="Creator" class="creator-icon" />
+      </div>
     </div>
     <hr />
     <div class="card-creator">
@@ -135,11 +163,15 @@
     <div class="card-imagem">
       <img src="imagens/xerek.jpg" alt="Equilibrium NFT 1" />
     </div>
-    <h2 class="card-title">Equilibrium #3429</h2>
-    <p class="card-descricao">Our Equilibrium collection promotes balance and calm.</p>
+    <h2 class="card-title">Shrek and the Three Musketeers</h2>
+    <p class="card-descricao">Shrek and his friends become musketeers to protect the kingdom.</p>
     <div class="card-info">
-      <div class="preco"><i class="fab fa-ethereum"></i><span>0.041 ETH</span></div>
-      <div class="dias"><i class="far fa-clock"></i><span>3 days left</span></div>
+      <div class="preco">
+        <img src="imagens/lindo.png" alt="Creator" class="creator-icon" />
+      </div>
+      <div class="dias">
+        <img src="imagens/icons8-shrek-48.png" alt="Creator" class="creator-icon" />
+      </div>
     </div>
     <hr />
     <div class="card-creator">
