--- a/index.html
+++ b/index.html
@@ -184,11 +184,11 @@
     <div class="card-imagem">
       <img src="imagens/xerek.jpg" alt="Equilibrium NFT 1" />
     </div>
-    <h2 class="card-title">Equilibrium #3429</h2>
-    <p class="card-descricao">Our Equilibrium collection promotes balance and calm.</p>
+    <h2 class="card-title">Shrek and the Twelve Dancing Princesses</h2>
+    <p class="card-descricao">Shrek joins 12 princesses in a magical dance adventure.</p>
     <div class="card-info">
-      <div class="preco"><i class="fab fa-ethereum"></i><span>0.041 ETH</span></div>
-      <div class="dias"><i class="far fa-clock"></i><span>3 days left</span></div>
+      <div class="dias"><img src="imagens/lindo.png" alt="Creator" class="creator-icon" /></div>
+      <div class="dias"><img src="imagens/icons8-shrek-48.png" alt="Creator" class="creator-icon" /></div>
     </div>
     <hr />
     <div class="card-creator">
@@ -201,11 +201,11 @@
     <div class="card-imagem">
       <img src="imagens/xerek.jpg" alt="Equilibrium NFT 1" />
     </div>
-    <h2 class="card-title">Equilibrium #3429</h2>
-    <p class="card-descricao">Our Equilibrium collection promotes balance and calm.</p>
+    <h2 class="card-title">Shrek in A Merry Christmas Carol</h2>
+    <p class="card-descricao">Shrek learns Christmas spirit with three ghostly visitors.</p>
     <div class="card-info">
-      <div class="preco"><i class="fab fa-ethereum"></i><span>0.041 ETH</span></div>
-      <div class="dias"><i class="far fa-clock"></i><span>3 days left</span></div>
+      <div class="dias"><img src="imagens/lindo.png" alt="Creator" class="creator-icon" /></div>
+      <div class="dias"><img src="imagens/icons8-shrek-48.png" alt="Creator" class="creator-icon" /></div>
     </div>
     <hr />
     <div class="card-creator">
@@ -218,11 +218,11 @@
     <div class="card-imagem">
       <img src="imagens/xerek.jpg" alt="Equilibrium NFT 1" />
     </div>
-    <h2 class="card-title">Equilibrium #3429</h2>
-    <p class="card-descricao">Our Equilibrium collection promotes balance and calm.</p>
+    <h2 class="card-title">Shrek and the Fairy Princess</h2>
+    <p class="card-descricao">Shrek befriends a fairy princess to unite two worlds.</p>
     <div class="card-info">
-      <div class="preco"><i class="fab fa-ethereum"></i><span>0.041 ETH</span></div>
-      <div class="dias"><i class="far fa-clock"></i><span>3 days left</span></div>
+      <div class="dias"><img src="imagens/lindo.png" alt="Creator" class="creator-icon" /></div>
+      <div class="dias"><img src="imagens/icons8-shrek-48.png" alt="Creator" class="creator-icon" /></div>
     </div>
     <hr />
     <div class="card-creator">
@@ -235,11 +235,11 @@
     <div class="card-imagem">
       <img src="imagens/xerek.jpg" alt="Equilibrium NFT 1" />
     </div>
-    <h2 class="card-title">Equilibrium #3429</h2>
-    <p class="card-descricao">Our Equilibrium collection promotes balance and calm.</p>
+    <h2 class="card-title">Shrek as the Princess and the Ogre</h2>
+    <p class="card-descricao">Shrek swaps places with a princess to save a kingdom.</p>
     <div class="card-info">
-      <div class="preco"><i class="fab fa-ethereum"></i><span>0.041 ETH</span></div>
-      <div class="dias"><i class="far fa-clock"></i><span>3 days left</span></div>
+      <div class="dias"><img src="imagens/lindo.png" alt="Creator" class="creator-icon" /></div>
+      <div class="dias"><img src="imagens/icons8-shrek-48.png" alt="Creator" class="creator-icon" /></div>
     </div>
     <hr />
     <div class="card-creator">
@@ -252,11 +252,11 @@
     <div class="card-imagem">
       <img src="imagens/xerek.jpg" alt="Equilibrium NFT 1" />
     </div>
-    <h2 class="card-title">Equilibrium #3429</h2>
-    <p class="card-descricao">Our Equilibrium collection promotes balance and calm.</p>
+    <h2 class="card-title">Shrek and the Fairy Princess</h2>
+    <p class="card-descricao">Shrek helps a shy fairy princess unite their kingdoms.</p>
     <div class="card-info">
-      <div class="preco"><i class="fab fa-ethereum"></i><span>0.041 ETH</span></div>
-      <div class="dias"><i class="far fa-clock"></i><span>3 days left</span></div>
+      <div class="dias"><img src="imagens/lindo.png" alt="Creator" class="creator-icon" /></div>
+      <div class="dias"><img src="imagens/icons8-shrek-48.png" alt="Creator" class="creator-icon" /></div>
     </div>
     <hr />
     <div class="card-creator">
@@ -269,11 +269,11 @@
     <div class="card-imagem">
       <img src="imagens/xerek.jpg" alt="Equilibrium NFT 1" />
     </div>
-    <h2 class="card-title">Equilibrium #3429</h2>
-    <p class="card-descricao">Our Equilibrium collection promotes balance and calm.</p>
+    <h2 class="card-title">Shrek in the Pink Shoes</h2>
+    <p class="card-descricao">Shrek enters a ballet world with magical pink shoes.</p>
     <div class="card-info">
-      <div class="preco"><i class="fab fa-ethereum"></i><span>0.041 ETH</span></div>
-      <div class="dias"><i class="far fa-clock"></i><span>3 days left</span></div>
+      <div class="dias"><img src="imagens/lindo.png" alt="Creator" class="creator-icon" /></div>
+      <div class="dias"><img src="imagens/icons8-shrek-48.png" alt="Creator" class="creator-icon" /></div>
     </div>
     <hr />
     <div class="card-creator">
@@ -286,11 +286,11 @@
     <div class="card-imagem">
       <img src="imagens/xerek.jpg" alt="Equilibrium NFT 1" />
     </div>
-    <h2 class="card-title">Equilibrium #3429</h2>
-    <p class="card-descricao">Our Equilibrium collection promotes balance and calm.</p>
+    <h2 class="card-title">Shrek and the Fairy Secret</h2>
+    <p class="card-descricao">Shrek enters a fairy world to rescue Fiona.</p>
     <div class="card-info">
-      <div class="preco"><i class="fab fa-ethereum"></i><span>0.041 ETH</span></div>
-      <div class="dias"><i class="far fa-clock"></i><span>3 days left</span></div>
+      <div class="dias"><img src="imagens/lindo.png" alt="Creator" class="creator-icon" /></div>
+      <div class="dias"><img src="imagens/icons8-shrek-48.png" alt="Creator" class="creator-icon" /></div>
     </div>
     <hr />
     <div class="card-creator">
@@ -303,11 +303,11 @@
     <div class="card-imagem">
       <img src="imagens/xerek.jpg" alt="Equilibrium NFT 1" />
     </div>
-    <h2 class="card-title">Equilibrium #3429</h2>
-    <p class="card-descricao">Our Equilibrium collection promotes balance and calm.</p>
+    <h2 class="card-title">Shrek in the Nutcracker</h2>
+    <p class="card-descricao">Shrek in the Nutcracker.</p>
     <div class="card-info">
-      <div class="preco"><i class="fab fa-ethereum"></i><span>0.041 ETH</span></div>
-      <div class="dias"><i class="far fa-clock"></i><span>3 days left</span></div>
+      <div class="dias"><img src="imagens/lindo.png" alt="Creator" class="creator-icon" /></div>
+      <div class="dias"><img src="imagens/icons8-shrek-48.png" alt="Creator" class="creator-icon" /></div>
     </div>
     <hr />
     <div class="card-creator">
