--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
       <div class="preco">
         <img src="imagens/lindo.png" alt="Creator" class="creator-icon" />
       </div>
+      <p class="nome-sherebie">Sharebie</p>
       <div class="dias">
         <img src="imagens/icons8-shrek-48.png" alt="Creator" class="creator-icon" />
       </div>
@@ -42,6 +43,7 @@
       <div class="preco">
         <img src="imagens/lindo.png" alt="Creator" class="creator-icon" />
       </div>
+      <p class="nome-sherebie">Sharebie</p>
       <div class="dias">
         <img src="imagens/icons8-shrek-48.png" alt="Creator" class="creator-icon" />
       </div>
@@ -63,6 +65,7 @@
       <div class="preco">
         <img src="imagens/lindo.png" alt="Creator" class="creator-icon" />
       </div>
+      <p class="nome-sherebie">Sharebie</p>
       <div class="dias">
         <img src="imagens/icons8-shrek-48.png" alt="Creator" class="creator-icon" />
       </div>
@@ -84,6 +87,7 @@
       <div class="preco">
         <img src="imagens/lindo.png" alt="Creator" class="creator-icon" />
       </div>
+      <p class="nome-sherebie">Sharebie</p>
       <div class="dias">
         <img src="imagens/icons8-shrek-48.png" alt="Creator" class="creator-icon" />
       </div>
@@ -106,6 +110,7 @@
       <div class="preco">
         <img src="imagens/lindo.png" alt="Creator" class="creator-icon" />
       </div>
+      <p class="nome-sherebie">Sharebie</p>
       <div class="dias">
         <img src="imagens/icons8-shrek-48.png" alt="Creator" class="creator-icon" />
       </div>
@@ -127,6 +132,7 @@
       <div class="preco">
         <img src="imagens/lindo.png" alt="Creator" class="creator-icon" />
       </div>
+      <p class="nome-sherebie">Sharebie</p>
       <div class="dias">
         <img src="imagens/icons8-shrek-48.png" alt="Creator" class="creator-icon" />
       </div>
@@ -148,6 +154,7 @@
       <div class="preco">
         <img src="imagens/lindo.png" alt="Creator" class="creator-icon" />
       </div>
+      <p class="nome-sherebie">Sharebie</p>
       <div class="dias">
         <img src="imagens/icons8-shrek-48.png" alt="Creator" class="creator-icon" />
       </div>
@@ -169,6 +176,7 @@
       <div class="preco">
         <img src="imagens/lindo.png" alt="Creator" class="creator-icon" />
       </div>
+      <p class="nome-sherebie">Sharebie</p>
       <div class="dias">
         <img src="imagens/icons8-shrek-48.png" alt="Creator" class="creator-icon" />
       </div>
@@ -188,6 +196,7 @@
     <p class="card-descricao">Shrek joins 12 princesses in a magical dance adventure.</p>
     <div class="card-info">
       <div class="dias"><img src="imagens/lindo.png" alt="Creator" class="creator-icon" /></div>
+      <p class="nome-sherebie">Sharebie</p>
       <div class="dias"><img src="imagens/icons8-shrek-48.png" alt="Creator" class="creator-icon" /></div>
     </div>
     <hr />
@@ -205,6 +214,7 @@
     <p class="card-descricao">Shrek learns Christmas spirit with three ghostly visitors.</p>
     <div class="card-info">
       <div class="dias"><img src="imagens/lindo.png" alt="Creator" class="creator-icon" /></div>
+      <p class="nome-sherebie">Sharebie</p>
       <div class="dias"><img src="imagens/icons8-shrek-48.png" alt="Creator" class="creator-icon" /></div>
     </div>
     <hr />
@@ -222,6 +232,7 @@
     <p class="card-descricao">Shrek befriends a fairy princess to unite two worlds.</p>
     <div class="card-info">
       <div class="dias"><img src="imagens/lindo.png" alt="Creator" class="creator-icon" /></div>
+      <p class="nome-sherebie">Sharebie</p>
       <div class="dias"><img src="imagens/icons8-shrek-48.png" alt="Creator" class="creator-icon" /></div>
     </div>
     <hr />
@@ -239,6 +250,7 @@
     <p class="card-descricao">Shrek swaps places with a princess to save a kingdom.</p>
     <div class="card-info">
       <div class="dias"><img src="imagens/lindo.png" alt="Creator" class="creator-icon" /></div>
+      <p class="nome-sherebie">Sharebie</p>
       <div class="dias"><img src="imagens/icons8-shrek-48.png" alt="Creator" class="creator-icon" /></div>
     </div>
     <hr />
@@ -256,6 +268,7 @@
     <p class="card-descricao">Shrek helps a shy fairy princess unite their kingdoms.</p>
     <div class="card-info">
       <div class="dias"><img src="imagens/lindo.png" alt="Creator" class="creator-icon" /></div>
+      <p class="nome-sherebie">Sharebie</p>
       <div class="dias"><img src="imagens/icons8-shrek-48.png" alt="Creator" class="creator-icon" /></div>
     </div>
     <hr />
@@ -273,6 +286,7 @@
     <p class="card-descricao">Shrek enters a ballet world with magical pink shoes.</p>
     <div class="card-info">
       <div class="dias"><img src="imagens/lindo.png" alt="Creator" class="creator-icon" /></div>
+      <p class="nome-sherebie">Sharebie</p>
       <div class="dias"><img src="imagens/icons8-shrek-48.png" alt="Creator" class="creator-icon" /></div>
     </div>
     <hr />
@@ -290,6 +304,7 @@
     <p class="card-descricao">Shrek enters a fairy world to rescue Fiona.</p>
     <div class="card-info">
       <div class="dias"><img src="imagens/lindo.png" alt="Creator" class="creator-icon" /></div>
+      <p class="nome-sherebie">Sharebie</p>
       <div class="dias"><img src="imagens/icons8-shrek-48.png" alt="Creator" class="creator-icon" /></div>
     </div>
     <hr />
@@ -307,6 +322,7 @@
     <p class="card-descricao">Shrek in the Nutcracker.</p>
     <div class="card-info">
       <div class="dias"><img src="imagens/lindo.png" alt="Creator" class="creator-icon" /></div>
+      <p class="nome-sherebie">Sharebie</p>
       <div class="dias"><img src="imagens/icons8-shrek-48.png" alt="Creator" class="creator-icon" /></div>
     </div>
     <hr />
