--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <hr />
     <div class="card-creator">
       <img src="imagens/helloo.jpg" alt="Creator" class="creator-icon" />
-      <span>Creation of <a href="#">Jules Wyvern</a></span>
+      <span>Creation of <a href="#">Laryssa Antunes</a></span>
     </div>
   </div>
 
@@ -51,7 +51,7 @@
     <hr />
     <div class="card-creator">
       <img src="imagens/helloo.jpg" alt="Creator" class="creator-icon" />
-      <span>Creation of <a href="#">Jules Wyvern</a></span>
+      <span>Creation of <a href="#">Thaissa Oliveira</a></span>
     </div>
   </div>
 
@@ -73,7 +73,7 @@
     <hr />
     <div class="card-creator">
       <img src="imagens/helloo.jpg" alt="Creator" class="creator-icon" />
-      <span>Creation of <a href="#">Jules Wyvern</a></span>
+      <span>Creation of <a href="#">Laryssa Antunes</a></span>
     </div>
   </div>
 
@@ -95,7 +95,7 @@
     <hr />
     <div class="card-creator">
       <img src="imagens/helloo.jpg" alt="Creator" class="creator-icon" />
-      <span>Creation of <a href="#">Jules Wyvern</a></span>
+      <span>Creation of <a href="#">Thaissa Oliveira</a></span>
     </div>
   </div>
 
@@ -118,7 +118,7 @@
     <hr />
     <div class="card-creator">
       <img src="imagens/helloo.jpg" alt="Creator" class="creator-icon" />
-      <span>Creation of <a href="#">Jules Wyvern</a></span>
+      <span>Creation of <a href="#">Laryssa Antunes</a></span>
     </div>
   </div>
 
@@ -140,7 +140,7 @@
     <hr />
     <div class="card-creator">
       <img src="imagens/helloo.jpg" alt="Creator" class="creator-icon" />
-      <span>Creation of <a href="#">Jules Wyvern</a></span>
+      <span>Creation of <a href="#">Thaissa Oliveira</a></span>
     </div>
   </div>
 
@@ -162,7 +162,7 @@
     <hr />
     <div class="card-creator">
       <img src="imagens/helloo.jpg" alt="Creator" class="creator-icon" />
-      <span>Creation of <a href="#">Jules Wyvern</a></span>
+      <span>Creation of <a href="#">Thaissa Oliveira</a></span>
     </div>
   </div>
 
@@ -184,7 +184,7 @@
     <hr />
     <div class="card-creator">
       <img src="imagens/helloo.jpg" alt="Creator" class="creator-icon" />
-      <span>Creation of <a href="#">Jules Wyvern</a></span>
+      <span>Creation of <a href="#">Laryssa Antunes</a></span>
     </div>
   </div>
 
@@ -202,7 +202,7 @@
     <hr />
     <div class="card-creator">
       <img src="imagens/helloo.jpg" alt="Creator" class="creator-icon" />
-      <span>Creation of <a href="#">Jules Wyvern</a></span>
+      <span>Creation of <a href="#">Thaissa Oliveira</a></span>
     </div>
   </div>
 
@@ -220,7 +220,7 @@
     <hr />
     <div class="card-creator">
       <img src="imagens/helloo.jpg" alt="Creator" class="creator-icon" />
-      <span>Creation of <a href="#">Jules Wyvern</a></span>
+      <span>Creation of <a href="#">Laryssa Antunes</a></span>
     </div>
   </div>
 
@@ -238,7 +238,7 @@
     <hr />
     <div class="card-creator">
       <img src="imagens/helloo.jpg" alt="Creator" class="creator-icon" />
-      <span>Creation of <a href="#">Jules Wyvern</a></span>
+      <span>Creation of <a href="#">Thaissa Oliveira</a></span>
     </div>
   </div>
 
@@ -256,7 +256,7 @@
     <hr />
     <div class="card-creator">
       <img src="imagens/helloo.jpg" alt="Creator" class="creator-icon" />
-      <span>Creation of <a href="#">Jules Wyvern</a></span>
+      <span>Creation of <a href="#">Laryssa Antunes</a></span>
     </div>
   </div>
 
@@ -274,7 +274,7 @@
     <hr />
     <div class="card-creator">
       <img src="imagens/helloo.jpg" alt="Creator" class="creator-icon" />
-      <span>Creation of <a href="#">Jules Wyvern</a></span>
+      <span>Creation of <a href="#">Thaissa Oliveira</a></span>
     </div>
   </div>
 
@@ -292,7 +292,7 @@
     <hr />
     <div class="card-creator">
       <img src="imagens/helloo.jpg" alt="Creator" class="creator-icon" />
-      <span>Creation of <a href="#">Jules Wyvern</a></span>
+      <span>Creation of <a href="#">Laryssa Antunes</a></span>
     </div>
   </div>
 
@@ -310,7 +310,7 @@
     <hr />
     <div class="card-creator">
       <img src="imagens/helloo.jpg" alt="Creator" class="creator-icon" />
-      <span>Creation of <a href="#">Jules Wyvern</a></span>
+      <span>Creation of <a href="#">Thaissa Oliveira</a></span>
     </div>
   </div>
 
@@ -328,7 +328,7 @@
     <hr />
     <div class="card-creator">
       <img src="imagens/helloo.jpg" alt="Creator" class="creator-icon" />
-      <span>Creation of <a href="#">Jules Wyvern</a></span>
+      <span>Creation of <a href="#">Laryssa Antunes</a></span>
     </div>
   </div>
 </div>
