--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </div>
     <hr />
     <div class="card-creator">
-      <img src="imagens/helloo.jpg" alt="Creator" class="creator-icon" />
+      <img src="imagens/laryssa.jpeg" alt="Creator" class="creator-icon" />
       <span>Creation of <a href="#">Laryssa Antunes</a></span>
     </div>
   </div>
@@ -50,7 +50,7 @@
     </div>
     <hr />
     <div class="card-creator">
-      <img src="imagens/helloo.jpg" alt="Creator" class="creator-icon" />
+      <img src="imagens/thaissa.jpeg" alt="Creator" class="creator-icon" />
       <span>Creation of <a href="#">Thaissa Oliveira</a></span>
     </div>
   </div>
@@ -72,7 +72,7 @@
     </div>
     <hr />
     <div class="card-creator">
-      <img src="imagens/helloo.jpg" alt="Creator" class="creator-icon" />
+      <img src="imagens/laryssa.jpeg" alt="Creator" class="creator-icon" />
       <span>Creation of <a href="#">Laryssa Antunes</a></span>
     </div>
   </div>
@@ -94,7 +94,7 @@
     </div>
     <hr />
     <div class="card-creator">
-      <img src="imagens/helloo.jpg" alt="Creator" class="creator-icon" />
+      <img src="imagens/thaissa.jpeg" alt="Creator" class="creator-icon" />
       <span>Creation of <a href="#">Thaissa Oliveira</a></span>
     </div>
   </div>
@@ -117,7 +117,7 @@
     </div>
     <hr />
     <div class="card-creator">
-      <img src="imagens/helloo.jpg" alt="Creator" class="creator-icon" />
+      <img src="imagens/laryssa.jpeg" alt="Creator" class="creator-icon" />
       <span>Creation of <a href="#">Laryssa Antunes</a></span>
     </div>
   </div>
@@ -139,7 +139,7 @@
     </div>
     <hr />
     <div class="card-creator">
-      <img src="imagens/helloo.jpg" alt="Creator" class="creator-icon" />
+      <img src="imagens/thaissa.jpeg" alt="Creator" class="creator-icon" />
       <span>Creation of <a href="#">Thaissa Oliveira</a></span>
     </div>
   </div>
@@ -161,8 +161,8 @@
     </div>
     <hr />
     <div class="card-creator">
-      <img src="imagens/helloo.jpg" alt="Creator" class="creator-icon" />
-      <span>Creation of <a href="#">Thaissa Oliveira</a></span>
+      <img src="imagens/laryssa.jpeg" alt="Creator" class="creator-icon" />
+      <span>Creation of <a href="#">Laryssa Antunes</a></span>
     </div>
   </div>
 
@@ -183,8 +183,8 @@
     </div>
     <hr />
     <div class="card-creator">
-      <img src="imagens/helloo.jpg" alt="Creator" class="creator-icon" />
-      <span>Creation of <a href="#">Laryssa Antunes</a></span>
+      <img src="imagens/thaissa.jpeg" alt="Creator" class="creator-icon" />
+      <span>Creation of <a href="#">Thaissa Oliveira</a></span>
     </div>
   </div>
 
@@ -201,8 +201,8 @@
     </div>
     <hr />
     <div class="card-creator">
-      <img src="imagens/helloo.jpg" alt="Creator" class="creator-icon" />
-      <span>Creation of <a href="#">Thaissa Oliveira</a></span>
+      <img src="imagens/laryssa.jpeg" alt="Creator" class="creator-icon" />
+      <span>Creation of <a href="#">Laryssa Antunes</a></span>
     </div>
   </div>
 
@@ -219,8 +219,8 @@
     </div>
     <hr />
     <div class="card-creator">
-      <img src="imagens/helloo.jpg" alt="Creator" class="creator-icon" />
-      <span>Creation of <a href="#">Laryssa Antunes</a></span>
+      <img src="imagens/thaissa.jpeg" alt="Creator" class="creator-icon" />
+      <span>Creation of <a href="#">Thaissa Oliveira</a></span>
     </div>
   </div>
 
@@ -237,8 +237,8 @@
     </div>
     <hr />
     <div class="card-creator">
-      <img src="imagens/helloo.jpg" alt="Creator" class="creator-icon" />
-      <span>Creation of <a href="#">Thaissa Oliveira</a></span>
+      <img src="imagens/laryssa.jpeg" alt="Creator" class="creator-icon" />
+      <span>Creation of <a href="#">Laryssa Antunes</a></span>
     </div>
   </div>
 
@@ -255,8 +255,8 @@
     </div>
     <hr />
     <div class="card-creator">
-      <img src="imagens/helloo.jpg" alt="Creator" class="creator-icon" />
-      <span>Creation of <a href="#">Laryssa Antunes</a></span>
+      <img src="imagens/thaissa.jpeg" alt="Creator" class="creator-icon" />
+      <span>Creation of <a href="#">Thaissa Oliveira</a></span>
     </div>
   </div>
 
@@ -273,8 +273,8 @@
     </div>
     <hr />
     <div class="card-creator">
-      <img src="imagens/helloo.jpg" alt="Creator" class="creator-icon" />
-      <span>Creation of <a href="#">Thaissa Oliveira</a></span>
+      <img src="imagens/laryssa.jpeg" alt="Creator" class="creator-icon" />
+      <span>Creation of <a href="#">Laryssa Antunes</a></span>
     </div>
   </div>
 
@@ -291,8 +291,8 @@
     </div>
     <hr />
     <div class="card-creator">
-      <img src="imagens/helloo.jpg" alt="Creator" class="creator-icon" />
-      <span>Creation of <a href="#">Laryssa Antunes</a></span>
+      <img src="imagens/thaissa.jpeg" alt="Creator" class="creator-icon" />
+      <span>Creation of <a href="#">Thaissa Oliveira</a></span>
     </div>
   </div>
 
@@ -309,8 +309,8 @@
     </div>
     <hr />
     <div class="card-creator">
-      <img src="imagens/helloo.jpg" alt="Creator" class="creator-icon" />
-      <span>Creation of <a href="#">Thaissa Oliveira</a></span>
+      <img src="imagens/laryssa.jpeg" alt="Creator" class="creator-icon" />
+      <span>Creation of <a href="#">Laryssa Antunes</a></span>
     </div>
   </div>
 
@@ -327,8 +327,8 @@
     </div>
     <hr />
     <div class="card-creator">
-      <img src="imagens/helloo.jpg" alt="Creator" class="creator-icon" />
-      <span>Creation of <a href="#">Laryssa Antunes</a></span>
+      <img src="imagens/thaissa.jpeg" alt="Creator" class="creator-icon" />
+      <span>Creation of <a href="#">Thaissa Oliveira</a></span>
     </div>
   </div>
 </div>
