--- a/index.html
+++ b/index.html
@@ -13,7 +13,11 @@
 <div class="cardlist">
   <div class="card animate__animated animate__zoomIn">
     <div class="card-imagem">
-      <img src="imagens/xerek.jpg" alt="Equilibrium NFT 1" />
+      <div class="carousel">
+        <img src="images/escola1.jpeg" alt="Equilibrium NFT 1" />
+        <img src="images/escola2.jpeg" alt="Shrek Image 2" class="carousel-image" />
+        <img src="images/escola3.jpeg" alt="Shrek Image 3" class="carousel-image" />
+      </div>
     </div>
     <h2 class="card-title">Shrek Princess Charm School</h2>
     <p class="card-descricao">Shrek learns royal manners to save a hidden kingdom.</p>
@@ -35,7 +39,11 @@
 
   <div class="card animate__animated animate__zoomIn">
     <div class="card-imagem">
-      <img src="imagens/xerek.jpg" alt="Equilibrium NFT 1" />
+      <div class="carousel">
+        <img src="images/pop1.jpeg" alt="Equilibrium NFT 2" />
+        <img src="images/pop2.jpeg" alt="Shrek Image 2" class="carousel-image" />
+        <img src="images/pop3.jpeg" alt="Shrek Image 3" class="carousel-image" />
+      </div>
     </div>
     <h2 class="card-title">Shrek in The Princess & the Pop Star</h2>
     <p class="card-descricao">Shrek rocks the stage to unite rival kingdoms.</p>
@@ -57,7 +65,11 @@
 
   <div class="card animate__animated animate__zoomIn">
     <div class="card-imagem">
-      <img src="imagens/xerek.jpg" alt="Equilibrium NFT 1" />
+      <div class="carousel">
+        <img src="images/castediamante1.jpeg" alt="Equilibrium NFT 2" />
+        <img src="images/castediamante2.jpeg" alt="Shrek Image 2" class="carousel-image" />
+        <img src="images/castediamante3.jpeg" alt="Shrek Image 3" class="carousel-image" />
+      </div>
     </div>
     <h2 class="card-title">Shrek and the Diamond Castle</h2>
     <p class="card-descricao">Shrek finds a magical castle and new friends.</p>
@@ -79,7 +91,11 @@
 
   <div class="card animate__animated animate__zoomIn">
     <div class="card-imagem">
-      <img src="imagens/xerek.jpg" alt="Equilibrium NFT 1" />
+      <div class="carousel">
+        <img src="images/FBI1.jpeg" alt="Equilibrium NFT 1" />
+        <img src="images/FBI2.jpeg" alt="Shrek Image 2" class="carousel-image" />
+        <img src="images/FBI3.jpeg" alt="Shrek Image 3" class="carousel-image" />
+      </div>
     </div>
     <h2 class="card-title">Shrek and the Secret Agents</h2>
     <p class="card-descricao">Shrek teams up with agents to stop a jewel thief.</p>
@@ -102,7 +118,11 @@
 
   <div class="card animate__animated animate__fadeInUp">
     <div class="card-imagem">
-      <img src="imagens/xerek.jpg" alt="Equilibrium NFT 1" />
+      <div class="carousel">
+        <img src="images/modao1.jpeg" alt="Equilibrium NFT 1" />
+        <img src="images/modao2.jpeg" alt="Shrek Image 2" class="carousel-image" />
+        <img src="images/modao3.jpeg" alt="Shrek Image 3" class="carousel-image" />
+      </div>
     </div>
     <h2 class="card-title">Shrek in the fashion fairy tale</h2>
     <p class="card-descricao">Shrek explores the world of glamor and enchanted designs.</p>
@@ -124,7 +144,11 @@
 
   <div class="card animate__animated animate__fadeInUp">
     <div class="card-imagem">
-      <img src="imagens/xerek.jpg" alt="Equilibrium NFT 1" />
+      <div class="carousel">
+        <img src="images/sereiao1.jpeg" alt="Equilibrium NFT 1" />
+        <img src="images/sereiao2.jpeg" alt="Shrek Image 2" class="carousel-image" />
+        <img src="images/sereiao3.jpeg" alt="Shrek Image 3" class="carousel-image" />
+      </div>
     </div>
     <h2 class="card-title">Shrek in A Mermaid Tale Part 1</h2>
     <p class="card-descricao">Shrek dives into an underwater adventure full of secrets and splashes.</p>
@@ -146,29 +170,33 @@
 
   <div class="card animate__animated animate__fadeInUp">
     <div class="card-imagem">
-      <img src="imagens/xerek.jpg" alt="Equilibrium NFT 1" />
+      <div class="carousel">
+        <img src="images/sapatilhao1.jpeg" alt="Equilibrium NFT 1" />
+        <img src="images/sapatilhao2.jpeg" alt="Shrek Image 2" class="carousel-image" />
+        <img src="images/sapatilhao3.jpeg" alt="Shrek Image 3" class="carousel-image" />
+      </div>
     </div>
-    <h2 class="card-title">Shrek in A Mermaid Tale Part 2</h2>
-    <p class="card-descricao">Shrek returns to the ocean, facing new challenges and friendships.</p>
+    <h2 class="card-title">Shrek in the magic shoes</h2>
+    <p class="card-descricao">Shrek enters a ballet world with magical pink shoes.</p>
     <div class="card-info">
-      <div class="preco">
-        <img src="imagens/lindo.png" alt="Creator" class="creator-icon" />
-      </div>
+      <div class="dias"><img src="imagens/lindo.png" alt="Creator" class="creator-icon" /></div>
       <p class="nome-sherebie">Sharebie</p>
-      <div class="dias">
-        <img src="imagens/icons8-shrek-48.png" alt="Creator" class="creator-icon" />
-      </div>
+      <div class="dias"><img src="imagens/icons8-shrek-48.png" alt="Creator" class="creator-icon" /></div>
     </div>
     <hr />
     <div class="card-creator">
-      <img src="imagens/laryssa.jpeg" alt="Creator" class="creator-icon" />
-      <span>Creation of <a href="#">Laryssa Antunes</a></span>
+      <img src="imagens/thaissa.jpeg" alt="Creator" class="creator-icon" />
+      <span>Creation of <a href="#">Thaissa Oliveira</a></span>
     </div>
   </div>
 
   <div class="card animate__animated animate__fadeInUp">
     <div class="card-imagem">
-      <img src="imagens/xerek.jpg" alt="Equilibrium NFT 1" />
+      <div class="carousel">
+        <img src="images/moscas.jpeg" alt="Equilibrium NFT 1" />
+        <img src="images/moscas2.jpeg" alt="Shrek Image 2" class="carousel-image" />
+        <img src="images/moscas3.jpeg" alt="Shrek Image 3" class="carousel-image" />
+      </div>
     </div>
     <h2 class="card-title">Shrek and the Three Musketeers</h2>
     <p class="card-descricao">Shrek and his friends become musketeers to protect the kingdom.</p>
@@ -190,7 +218,11 @@
 
   <div class="card animate__animated animate__flipInY">
     <div class="card-imagem">
-      <img src="imagens/xerek.jpg" alt="Equilibrium NFT 1" />
+      <div class="carousel">
+        <img src="images/bailarina1.jpeg" alt="Equilibrium NFT 1" />
+        <img src="images/bailarina2.jpeg" alt="Shrek Image 2" class="carousel-image" />
+        <img src="images/bailarina3.jpeg" alt="Shrek Image 3" class="carousel-image" />
+      </div>
     </div>
     <h2 class="card-title">Shrek and the Twelve Dancing Princesses</h2>
     <p class="card-descricao">Shrek joins 12 princesses in a magical dance adventure.</p>
@@ -208,8 +240,13 @@
 
   <div class="card animate__animated animate__flipInY">
     <div class="card-imagem">
-      <img src="imagens/xerek.jpg" alt="Equilibrium NFT 1" />
-    </div>
+        <div class="carousel">
+          <img src="images/natal1.jpeg" alt="Equilibrium NFT 1" />
+          <img src="images/natal2.jpeg" alt="Shrek Image 2" class="carousel-image" />
+          <img src="images/natal3.jpeg" alt="Shrek Image 3" class="carousel-image" />
+        </div>
+      </div>
+
     <h2 class="card-title">Shrek in A Merry Christmas Carol</h2>
     <p class="card-descricao">Shrek learns Christmas spirit with three ghostly visitors.</p>
     <div class="card-info">
@@ -226,7 +263,11 @@
 
   <div class="card animate__animated animate__flipInY">
     <div class="card-imagem">
-      <img src="imagens/xerek.jpg" alt="Equilibrium NFT 1" />
+      <div class="carousel">
+        <img src="images/fada1.jpeg" alt="Equilibrium NFT 1" />
+        <img src="images/fada2.jpeg" alt="Shrek Image 2" class="carousel-image" />
+        <img src="images/fada3.jpeg" alt="Shrek Image 3" class="carousel-image" />
+      </div>
     </div>
     <h2 class="card-title">Shrek and the Fairy Princess</h2>
     <p class="card-descricao">Shrek befriends a fairy princess to unite two worlds.</p>
@@ -244,7 +285,11 @@
 
   <div class="card animate__animated animate__flipInY">
     <div class="card-imagem">
-      <img src="imagens/xerek.jpg" alt="Equilibrium NFT 1" />
+      <div class="carousel">
+        <img src="images/ograo1.jpeg" alt="Equilibrium NFT 1" />
+        <img src="images/ograo2.jpeg" alt="Shrek Image 2" class="carousel-image" />
+        <img src="images/ograo3.jpeg" alt="Shrek Image 3" class="carousel-image" />
+      </div>
     </div>
     <h2 class="card-title">Shrek as the Princess and the Ogre</h2>
     <p class="card-descricao">Shrek swaps places with a princess to save a kingdom.</p>
@@ -260,9 +305,29 @@
     </div>
   </div>
 
+
+
   <div class="card animate__animated animate__hinge">
     <div class="card-imagem">
-      <img src="imagens/xerek.jpg" alt="Equilibrium NFT 1" />
+        <img src="images/bonecao.jpeg" alt="Equilibrium NFT 1" />
+    </div>
+    <h2 class="card-title">Shrek in the Nutcracker</h2>
+    <p class="card-descricao">Shrek and Fiona fight the Mouse King in a magical world.    </p>
+    <div class="card-info">
+      <div class="dias"><img src="imagens/lindo.png" alt="Creator" class="creator-icon" /></div>
+      <p class="nome-sherebie">Sharebie</p>
+      <div class="dias"><img src="imagens/icons8-shrek-48.png" alt="Creator" class="creator-icon" /></div>
+    </div>
+    <hr />
+    <div class="card-creator">
+      <img src="imagens/thaissa.jpeg" alt="Creator" class="creator-icon" />
+      <span>Creation of <a href="#">Thaissa Oliveira</a></span>
+    </div>
+  </div>
+
+  <div class="card animate__animated animate__hinge">
+    <div class="card-imagem">
+      <img src="images/fadao.jpeg" alt="Equilibrium NFT 1" />
     </div>
     <h2 class="card-title">Shrek and the Fairy Princess</h2>
     <p class="card-descricao">Shrek helps a shy fairy princess unite their kingdoms.</p>
@@ -277,28 +342,32 @@
       <span>Creation of <a href="#">Laryssa Antunes</a></span>
     </div>
   </div>
-
+  
   <div class="card animate__animated animate__hinge">
     <div class="card-imagem">
-      <img src="imagens/xerek.jpg" alt="Equilibrium NFT 1" />
+      <img src="images/peixao.jpeg" alt="Equilibrium NFT 1" />
     </div>
-    <h2 class="card-title">Shrek in the Pink Shoes</h2>
-    <p class="card-descricao">Shrek enters a ballet world with magical pink shoes.</p>
+    <h2 class="card-title">Shrek in A Mermaid Tale Part 2</h2>
+    <p class="card-descricao">Shrek returns to the ocean, facing new challenges and friendships.</p>
     <div class="card-info">
-      <div class="dias"><img src="imagens/lindo.png" alt="Creator" class="creator-icon" /></div>
+      <div class="preco">
+        <img src="imagens/lindo.png" alt="Creator" class="creator-icon" />
+      </div>
       <p class="nome-sherebie">Sharebie</p>
-      <div class="dias"><img src="imagens/icons8-shrek-48.png" alt="Creator" class="creator-icon" /></div>
+      <div class="dias">
+        <img src="imagens/icons8-shrek-48.png" alt="Creator" class="creator-icon" />
+      </div>
     </div>
     <hr />
     <div class="card-creator">
-      <img src="imagens/thaissa.jpeg" alt="Creator" class="creator-icon" />
-      <span>Creation of <a href="#">Thaissa Oliveira</a></span>
+      <img src="imagens/laryssa.jpeg" alt="Creator" class="creator-icon" />
+      <span>Creation of <a href="#">Laryssa Antunes</a></span>
     </div>
   </div>
 
   <div class="card animate__animated animate__hinge">
     <div class="card-imagem">
-      <img src="imagens/xerek.jpg" alt="Equilibrium NFT 1" />
+      <img src="images/fadinha.jpeg" alt="Equilibrium NFT 1" />
     </div>
     <h2 class="card-title">Shrek and the Fairy Secret</h2>
     <p class="card-descricao">Shrek enters a fairy world to rescue Fiona.</p>
@@ -311,24 +380,6 @@
     <div class="card-creator">
       <img src="imagens/laryssa.jpeg" alt="Creator" class="creator-icon" />
       <span>Creation of <a href="#">Laryssa Antunes</a></span>
-    </div>
-  </div>
-
-  <div class="card animate__animated animate__hinge">
-    <div class="card-imagem">
-      <img src="imagens/xerek.jpg" alt="Equilibrium NFT 1" />
-    </div>
-    <h2 class="card-title">Shrek in the Nutcracker</h2>
-    <p class="card-descricao">Shrek in the Nutcracker.</p>
-    <div class="card-info">
-      <div class="dias"><img src="imagens/lindo.png" alt="Creator" class="creator-icon" /></div>
-      <p class="nome-sherebie">Sharebie</p>
-      <div class="dias"><img src="imagens/icons8-shrek-48.png" alt="Creator" class="creator-icon" /></div>
-    </div>
-    <hr />
-    <div class="card-creator">
-      <img src="imagens/thaissa.jpeg" alt="Creator" class="creator-icon" />
-      <span>Creation of <a href="#">Thaissa Oliveira</a></span>
     </div>
   </div>
 </div>
