--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 <body>
 
 <header>
+  <div class="logo">
+    <img src="imagens/logo.jpeg" alt="Logo">
+  </div>
   <h1>Shrek no Mundo da Barbie</h1>
 </header>
 
