--- a/index.html
+++ b/index.html
@@ -15,11 +15,22 @@
     <img src="imagens/logo.jpeg" alt="Logo">
   </div>
   <h1>Shrek no Mundo da Barbie</h1>
+  <nav>
+    <ul>
+        <li><a href="extras/filmes.html">Filmes</a></li>
+        <li><a href="extras/imagens.html">Imagens</a></li>
+        <li><a href="extras/curi.html">Curiosidades</a></li>
+    </ul>
+</nav>
+<div class="card-info">
+  <div class="preco">
+    <img src="imagens/lindo.png" alt="Creator" class="creator-icon" />
+  </div>
+  <div class="dias">
+    <img src="imagens/icons8-shrek-48.png" alt="Creator" class="creator-icon" />
+  </div>
+</div>
 </header>
-
-
-
-  
 
 <div class="cardlist">
   <div class="card animate__animated animate__zoomIn">
