--- a/index.html
+++ b/index.html
@@ -12,17 +12,17 @@
 
 <header>
   <div class="logo">
-    <img src="imagens/logo.jpeg" alt="Logo">
+    <img src="imagens/logo2.jpeg" alt="Logo">
   </div>
-  <h1>Shrek no Mundo da Barbie</h1>
+  <h1><a>Shrek in Barbie World</a></h1>
   <nav>
     <ul>
-        <li><a href="extras/filmes.html">Filmes</a></li>
-        <li><a href="extras/imagens.html">Imagens</a></li>
-        <li><a href="extras/curi.html">Curiosidades</a></li>
+        <li class="filmes"><a href="extras/filmes.html">Films</a></li>
+        <li><a href="extras/imagens.html">Images</a></li>
+        <li><a href="extras/curi.html">Curiosities</a></li>
     </ul>
 </nav>
-<div class="card-info">
+<div class="card-infoo">
   <div class="preco">
     <img src="imagens/lindo.png" alt="Creator" class="creator-icon" />
   </div>
