--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
         <img src="images/sapatilhao3.jpeg" alt="Shrek Image 3" class="carousel-image" />
       </div>
     </div>
-    <h2 class="card-title">Shrek in the magic shoes</h2>
+    <h2 class="card-title">Shrek with the Magical Pink Slippers</h2>
     <p class="card-descricao">Shrek enters a ballet world with magical pink shoes.</p>
     <div class="card-info">
       <div class="dias"><img src="imagens/lindo.png" alt="Creator" class="creator-icon" /></div>
