--- a/extras/imagens.html
+++ b/extras/imagens.html
@@ -8,234 +8,79 @@
 </head>
 <body>
   <div class="cardlist">
-    <div class="card">
-      <div class="card-imagem">
-        <img src="../images/bailarina1.jpeg" alt="Imagem 1">
+    <div class="card grande-card">
+      <div class="image-row">
+        <div class="card-imagem"><img src="../images/bailarina1.jpeg" alt="Imagem 1"></div>
+        <div class="card-imagem"><img src="../images/bailarina2.jpeg" alt="Imagem 2"></div>
+        <div class="card-imagem"><img src="../images/bailarina3.jpeg" alt="Imagem 3"></div>
+        <div class="card-imagem"><img src="../images/bonecao.jpeg" alt="Imagem 4"></div>
       </div>
+      <div class="image-row">
+        <div class="card-imagem"><img src="../images/bonecao2.jpeg" alt="Imagem 5"></div>
+        <div class="card-imagem"><img src="../images/bonecao3.jpeg" alt="Imagem 6"></div>
+        <div class="card-imagem"><img src="../images/castediamante1.jpeg" alt="Imagem 7"></div>
+        <div class="card-imagem"><img src="../images/castediamante2.jpeg" alt="Imagem 8"></div>
+      </div>
+      <div class="image-row">
+        <div class="card-imagem"><img src="../images/castediamante3.jpeg" alt="Imagem 9"></div>
+        <div class="card-imagem"><img src="../images/escola1.jpeg" alt="Imagem 10"></div>
+        <div class="card-imagem"><img src="../images/escola2.jpeg" alt="Imagem 11"></div>
+        <div class="card-imagem"><img src="../images/escola3.jpeg" alt="Imagem 12"></div>
+      </div>
+      <div class="image-row">
+        <div class="card-imagem"><img src="../images/fada1.jpeg" alt="Imagem 13"></div>
+        <div class="card-imagem"><img src="../images/fada2.jpeg" alt="Imagem 14"></div>
+        <div class="card-imagem"><img src="../images/fada3.jpeg" alt="Imagem 15"></div>
+        <div class="card-imagem"><img src="../images/fadao.jpeg" alt="Imagem 16"></div>
+      </div>
+      <div class="image-row">
+        <div class="card-imagem"><img src="../images/fadinha.jpeg" alt="Imagem 17"></div>
+        <div class="card-imagem"><img src="../images/FBI1.jpeg" alt="Imagem 18"></div>
+        <div class="card-imagem"><img src="../images/FBI2.jpeg" alt="Imagem 19"></div>
+        <div class="card-imagem"><img src="../images/FBI3.jpeg" alt="Imagem 20"></div>
+      </div>
+      <div class="image-row">
+        <div class="card-imagem"><img src="../images/modao1.jpeg" alt="Imagem 21"></div>
+        <div class="card-imagem"><img src="../images/modao2.jpeg" alt="Imagem 22"></div>
+        <div class="card-imagem"><img src="../images/modao3.jpeg" alt="Imagem 23"></div>
+        <div class="card-imagem"><img src="../images/moscas.jpeg" alt="Imagem 24"></div>
+      </div>
+      <div class="image-row">
+        <div class="card-imagem"><img src="../images/moscas2.jpeg" alt="Imagem 25"></div>
+        <div class="card-imagem"><img src="../images/moscas3.jpeg" alt="Imagem 26"></div>
+        <div class="card-imagem"><img src="../images/natal1.jpeg" alt="Imagem 27"></div>
+        <div class="card-imagem"><img src="../images/natal2.jpeg" alt="Imagem 28"></div>
+      </div>
+      <div class="image-row">
+        <div class="card-imagem"><img src="../images/natal3.jpeg" alt="Imagem 29"></div>
+        <div class="card-imagem"><img src="../images/ograo1.jpeg" alt="Imagem 30"></div>
+        <div class="card-imagem"><img src="../images/ograo2.jpeg" alt="Imagem 31"></div>
+        <div class="card-imagem"><img src="../images/ograo3.jpeg" alt="Imagem 32"></div>
+      </div>
+      <div class="image-row">
+        <div class="card-imagem"><img src="../images/peixao.jpeg" alt="Imagem 33"></div>
+        <div class="card-imagem"><img src="../images/pop1.jpeg" alt="Imagem 34"></div>
+        <div class="card-imagem"><img src="../images/pop2.jpeg" alt="Imagem 35"></div>
+        <div class="card-imagem"><img src="../images/pop3.jpeg" alt="Imagem 36"></div>
+      </div>
+      <div class="image-row">
+        <div class="card-imagem"><img src="../images/sapatilhao1.jpeg" alt="Imagem 37"></div>
+        <div class="card-imagem"><img src="../images/sapatilhao2.jpeg" alt="Imagem 38"></div>
+        <div class="card-imagem"><img src="../images/sapatilhao3.jpeg" alt="Imagem 39"></div>
+        <div class="card-imagem"><img src="../images/sereiao1.jpeg" alt="Imagem 40"></div>
+      </div>
+      <div class="image-row">
+        <div class="card-imagem"><img src="../images/sereiao2.jpeg" alt="Imagem 41"></div>
+        <div class="card-imagem"><img src="../images/sereiao3.jpeg" alt="Imagem 42"></div>
+        <div class="card-imagem"><img src="../imagens/logo.jpeg" alt="Imagem 43"></div>
+        <div class="card-imagem"><img src="../imagens/logo2.jpeg" alt="Imagem 44"></div>
+      </div>
+      <button class="home-button"><a href="../index.html">Voltar para a Página Home</a></button>
+      <footer>
+        <p>&copy; 2024 Shrek in Barbie World</p>
+    </footer>
     </div>
-    <div class="card">
-      <div class="card-imagem">
-        <img src="../images/bailarina2.jpeg" alt="Imagem 2">
-      </div>
-    </div>
-    <div class="card">
-      <div class="card-imagem">
-        <img src="../images/bailarina3.jpeg" alt="Imagem 3">
-      </div>
-    </div>
-    <div class="card">
-      <div class="card-imagem">
-        <img src="../images/bonecao.jpeg" alt="Imagem 4">
-      </div>
-    </div>
-    <div class="card">
-        <div class="card-imagem">
-          <img src="../images/bonecao2.jpeg" alt="Imagem 4">
-        </div>
-      </div>
-      <div class="card">
-        <div class="card-imagem">
-          <img src="../images/bonecao3.jpeg" alt="Imagem 4">
-        </div>
-      </div>
-      <div class="card">
-        <div class="card-imagem">
-          <img src="../images/castediamante1.jpeg" alt="Imagem 4">
-        </div>
-      </div>
-      <div class="card">
-        <div class="card-imagem">
-          <img src="../images/castediamante2.jpeg" alt="Imagem 4">
-        </div>
-      </div>
-      <div class="card">
-        <div class="card-imagem">
-          <img src="../images/castediamante3.jpeg" alt="Imagem 4">
-        </div>
-      </div>
-      <div class="card">
-        <div class="card-imagem">
-          <img src="../images/escola1.jpeg" alt="Imagem 4">
-        </div>
-      </div>
-      <div class="card">
-        <div class="card-imagem">
-          <img src="../images/escola2.jpeg" alt="Imagem 4">
-        </div>
-      </div>
-      <div class="card">
-        <div class="card-imagem">
-          <img src="../images/escola3.jpeg" alt="Imagem 4">
-        </div>
-      </div>
-      <div class="card">
-        <div class="card-imagem">
-          <img src="../images/fada1.jpeg" alt="Imagem 4">
-        </div>
-      </div>
-      <div class="card">
-        <div class="card-imagem">
-          <img src="../images/fada2.jpeg" alt="Imagem 4">
-        </div>
-      </div>
-      <div class="card">
-        <div class="card-imagem">
-          <img src="../images/fada3.jpeg" alt="Imagem 4">
-        </div>
-      </div>
-      <div class="card">
-        <div class="card-imagem">
-          <img src="../images/fadao.jpeg" alt="Imagem 4">
-        </div>
-      </div>
-      <div class="card">
-        <div class="card-imagem">
-          <img src="../images/fadinha.jpeg" alt="Imagem 4">
-        </div>
-      </div>
-      <div class="card">
-        <div class="card-imagem">
-          <img src="../images/FBI1.jpeg" alt="Imagem 4">
-        </div>
-      </div>
-      <div class="card">
-        <div class="card-imagem">
-          <img src="../images/FBI2.jpeg" alt="Imagem 4">
-        </div>
-      </div>
-      <div class="card">
-        <div class="card-imagem">
-          <img src="../images/FBI3.jpeg" alt="Imagem 4">
-        </div>
-      </div>
-      <div class="card">
-        <div class="card-imagem">
-          <img src="../images/modao1.jpeg" alt="Imagem 4">
-        </div>
-      </div>
-      <div class="card">
-        <div class="card-imagem">
-          <img src="../images/modao2.jpeg" alt="Imagem 4">
-        </div>
-      </div>
-      <div class="card">
-        <div class="card-imagem">
-          <img src="../images/modao3.jpeg" alt="Imagem 4">
-        </div>
-      </div>
-      <div class="card">
-        <div class="card-imagem">
-          <img src="../images/moscas.jpeg" alt="Imagem 4">
-        </div>
-      </div>
-      <div class="card">
-        <div class="card-imagem">
-          <img src="../images/moscas2.jpeg" alt="Imagem 4">
-        </div>
-      </div>
-      <div class="card">
-        <div class="card-imagem">
-          <img src="../images/moscas3.jpeg" alt="Imagem 4">
-        </div>
-      </div>
-      <div class="card">
-        <div class="card-imagem">
-          <img src="../images/natal1.jpeg" alt="Imagem 4">
-        </div>
-      </div>
-      <div class="card">
-        <div class="card-imagem">
-          <img src="../images/natal2.jpeg" alt="Imagem 4">
-        </div>
-      </div>
-      <div class="card">
-        <div class="card-imagem">
-          <img src="../images/natal3.jpeg" alt="Imagem 4">
-        </div>
-      </div>
-      <div class="card">
-        <div class="card-imagem">
-          <img src="../images/ograo1.jpeg" alt="Imagem 4">
-        </div>
-      </div>
-      <div class="card">
-        <div class="card-imagem">
-          <img src="../images/ograo2.jpeg" alt="Imagem 4">
-        </div>
-      </div>
-      <div class="card">
-        <div class="card-imagem">
-          <img src="../images/ograo3.jpeg" alt="Imagem 4">
-        </div>
-      </div>
-      <div class="card">
-        <div class="card-imagem">
-          <img src="../images/peixao.jpeg" alt="Imagem 4">
-        </div>
-      </div> 
-      <div class="card">
-        <div class="card-imagem">
-          <img src="../images/pop1.jpeg" alt="Imagem 4">
-        </div>
-      </div>
-      <div class="card">
-        <div class="card-imagem">
-          <img src="../images/pop2.jpeg" alt="Imagem 4">
-        </div>
-      </div>
-      <div class="card">
-        <div class="card-imagem">
-          <img src="../images/pop3.jpeg" alt="Imagem 4">
-        </div>
-      </div>
-      <div class="card">
-        <div class="card-imagem">
-          <img src="../images/sapatilhao1.jpeg" alt="Imagem 4">
-        </div>
-      </div>
-      <div class="card">
-        <div class="card-imagem">
-          <img src="../images/sapatilhao2.jpeg" alt="Imagem 4">
-        </div>
-      </div>
-      <div class="card">
-        <div class="card-imagem">
-          <img src="../images/sapatilhao3.jpeg" alt="Imagem 4">
-        </div>
-      </div>
-      <div class="card">
-        <div class="card-imagem">
-          <img src="../images/sereiao1.jpeg" alt="Imagem 4">
-        </div>
-      </div>
-      <div class="card">
-        <div class="card-imagem">
-          <img src="../images/sereiao2.jpeg" alt="Imagem 4">
-        </div>
-      </div>
-
-        <div class="card">
-        <div class="card-imagem">
-          <img src="../images/sereiao1.jpeg" alt="Imagem 4">
-        </div>
-      </div>
-
-      <div class="card">
-        <div class="card-imagem">
-          <img src="../images/sereiao3.jpeg" alt="Imagem 4">
-        </div>
-      </div>
-
-      <div class="card">
-        <div class="card-imagem">
-          <img src="../imagens/logo2.jpeg" alt="Imagem 4">
-        </div>
-      </div>
-
-      <ul>
-        <p><a href="../index.html" class="home-link">Voltar para a Página Home</a></p>
-    </ul>
-
+    
   </div>
 </body>
 </html>
